Bug 154038 - UI: Wrong line spacing value in sidebar properties editor
Summary: UI: Wrong line spacing value in sidebar properties editor
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.3.3.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Sidebar-Properties-Paragraph Paragraph-Dialog
  Show dependency treegraph
 
Reported: 2023-03-07 10:20 UTC by lf-bt
Modified: 2023-08-01 15:19 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of sidebar (31.26 KB, image/png)
2023-03-07 10:21 UTC, lf-bt
Details
Screenshot of Paragraph... dialog (20.52 KB, image/png)
2023-03-07 10:22 UTC, lf-bt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description lf-bt 2023-03-07 10:20:45 UTC
Description:
When Line Spacing is set to "Fixed" the values from the Properties sidebar and the  Paragraph... > Indents & Spacing dialog box do not match, although the same underlying paragraph property is exposed by them.

Steps to Reproduce:
1. Create new Presentation
2. Add two lines of Text
3. Compare/Set Line Spacing "Fixed" via Sidebar vs. via Paragraph... dialog box

Actual Results:
See Screenshots:
The Sidebar shows (e.g.) "2.0 cm", while the Paragraph... dialog box shows "1.13 cm".

The ODP file has <style:paragraph-properties fo:line-height="1.134cm"/>, so the value from Paragraph... seems to be the correct one.


Expected Results:
The value in the Sidebar matches the one under Paragraph...


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.4.5.1 / LibreOffice Community
Build ID: 40(Build:1)
CPU threads: 24; OS: Linux 5.19; UI render: default; VCL: x11
Locale: en-GB (en_GB.UTF-8); UI: en-US
Debian package version: 4:7.4.5-2
Calc: threaded
Comment 1 lf-bt 2023-03-07 10:21:49 UTC
Created attachment 185812 [details]
Screenshot of sidebar
Comment 2 lf-bt 2023-03-07 10:22:13 UTC
Created attachment 185813 [details]
Screenshot of Paragraph... dialog
Comment 3 Rafael Lima 2023-03-07 20:43:12 UTC
I can reproduce the problem in

Version: 7.5.1.2 (X86_64) / LibreOffice Community
Build ID: 50(Build:2)
CPU threads: 12; OS: Linux 5.19; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 4:7.5.1~rc2-0ubuntu0.22.10.1~lo1
Calc: threaded

If I set a fixed value using the sidebar and then open the Paragraph dialog, I get a different value as reported by the OP. And changing the value in the dialog will further change the value in the sidebar.
Comment 4 stragu 2023-07-17 19:14:12 UTC
Started in 6.3. Values matched in 6.2.

Repro in:

Version: 6.3.6.2
Build ID: 2196df99b074d8a661f4036fca8fa0cbfa33a497
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3; 
Locale: en-AU (en_AU.UTF-8); UI-Language: en-US
Calc: threaded

Still in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 77fca616e0bd79e0b405fd0b3543cf8e94e15df3
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Bibisected with linux-64-6.3 repository to first bad commit 2c159d233325377e9c78b5fab625d196bc002cf6 which points to core commit fe3c08b5905a837cb63f57cefc8e43787c96b9c6 which is a cherrypick of:

commit 849b837d1a3b185a8dd893a8f6eaed53605bcab1
author	Jim Raykowski <raykowj@gmail.com>	Tue Jun 04 15:49:12 2019 -0800
committer	Jim Raykowski <raykowj@gmail.com>	Fri Jul 05 05:52:49 2019 +0200
tdf#83618 Make line spacing values agree
Reviewed-on: https://gerrit.libreoffice.org/73737

Jim, can you please have a look?
Comment 5 Jim Raykowski 2023-07-20 05:47:26 UTC
It seems impress and writer require different stuff for calculating fixed line spacing values. Here is a patch that seems to produce expected values for both:
https://gerrit.libreoffice.org/c/core/+/154665
Comment 6 Commit Notification 2023-07-23 18:28:07 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/efbdd13f96888ae06717afafb1e4014ce502aa3e

tdf#154038 tdf#83618 fix wrong line spacing value

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 stragu 2023-07-24 13:22:11 UTC
Thanks Jim!
Verified the fix in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 94caaf5c9e2917a3202cf515d61eaa9399b2c2b5
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 8 Commit Notification 2023-08-01 15:19:59 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/617558caec55960183c19ec8bedd701a674c8984

tdf#154038 tdf#83618 fix wrong line spacing value

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.