tdf#154038 tdf#83618 fix wrong line spacing value

Impress and Writer seem to require different MapUnit values for fixed
line spacing metric values to be correctly calculated. This patch
initially sets the MapUnit unit value to Map100thMM, which is what it
was before commit 849b837d1a3b185a8dd893a8f6eaed53605bcab1, which works
for Impress. For Writer, the value is set to MapTwip.

Change-Id: I49e9b80aa4d3fbda1f19101903d2a4459089024c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154665
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
(cherry picked from commit efbdd13f96888ae06717afafb1e4014ce502aa3e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155170
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>